security: 移除配置文件中的敏感信息
- 将application.yml中的IP地址改为localhost
- 将默认用户名密码改为通用占位符
- 更新.env.example移除实际配置
- 确保所有敏感配置通过环境变量管理

--- a/.gitignore
+++ b/.gitignore
@@ -93,5 +93,5 @@ nul
 .env.*.local
 
 # Production config (contains sensitive information)
-application-local.yml
+src/main/resources/application-local.yml
 application-prod.yml
